objects/recordCDC__e.object
<CustomObject>
    <description>Change data capture events generated by the Salesforce platform.</description>
    <fields>
        <fullName>Timestamp__c</fullName>
        <defaultValue>Now()</defaultValue>
        <label>Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>recordID__c</fullName>
        <description>ID of the record that changed.</description>
        <label>recordID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>serial_no__c</fullName>
        <description>Serial number of the solar panel track associated with the CDC event.</description>
        <label>serial no</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>recordCDC</label>
    <pluralLabel>recordCDC</pluralLabel>
</CustomObject>